src/app/(frontend)/globals.css
@import 'tailwindcss';
@import 'tw-animate-css';

@config '../../../tailwind.config.mjs';

@custom-variant dark (&:is([data-theme='dark'] *));
@custom-variant sm (@media (width >= theme(--breakpoint-sm)));
@custom-variant md (@media (width >= theme(--breakpoint-md)));
@custom-variant lg (@media (width >= theme(--breakpoint-lg)));
@custom-variant xl (@media (width >= theme(--breakpoint-xl)));
@custom-variant 2xl (@media (width >= theme(--breakpoint-2xl)));

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: unset;
    font-size: unset;
  }
}

@plugin "@tailwindcss/typography";

@source inline("lg:col-span-4");
@source inline("lg:col-span-6");
@source inline("lg:col-span-8");
@source inline("lg:col-span-12");
@source inline("border-border");
@source inline("bg-card");
@source inline("border-error");
@source inline("bg-error/30");
@source inline("border-success");
@source inline("bg-success/30");
@source inline("border-warning");
@source inline("bg-warning/30");

@theme {
  --breakpoint-tablet: 50rem;
  --breakpoint-desktop: 90rem;
  --breakpoint-sm: 40rem;
  --breakpoint-md: 48rem;
  --breakpoint-lg: 64rem;
  --breakpoint-xl: 80rem;
  --breakpoint-2xl: 86rem;
  --font-mono: var(--font-geist-mono);
  --font-sans: var(--font-geist-sans);

  --radius: 0.5rem;

  --spacing-header: 92px;
}
/* 
@media (width >= theme(--breakpoint-md)) {
  :root {
    --spacing-header: 92px;
  }
}

@media (width >= theme(--breakpoint-lg)) {
  :root {
    --spacing-header: 4rem;
  }
}
 */
@layer utilities {
  .container {
    width: 100%;
    margin-inline: auto;
    padding-inline: 1.25rem;
  }

  @variant sm {
    .container {
      max-width: var(--breakpoint-sm);
    }
  }

  @variant md {
    .container {
      max-width: var(--breakpoint-md);
      padding-inline: 2rem;
    }
  }

  @variant lg {
    .container {
      max-width: var(--breakpoint-lg);
    }
  }

  @variant xl {
    .container {
      max-width: var(--breakpoint-xl);
    }
  }

  @variant 2xl {
    .container {
      max-width: var(--breakpoint-2xl);
    }
  }
}

:root {
  --header-height: 89px;
  --gold: #ffb94a;
  --orange: #fa681c;
  --tangerine: #f74a0b;
  --dark-blue: #00152b;
  --off-black: #00070f;
  --off-white: #f7f7f7;
  --white: #ffffff;
  --light-gray: #ececec;
  --navy-1000: #002e5d;
  --navy-900: #00366d;
  --navy-800: #1a436d;
  --navy-700: #264d75;
  --navy-600: #33587d;
  --navy-500: #406285;
  --navy-400: #4d6d8e;
  --navy-300: #597796;
  --navy-200: #99abbe;
  --navy-100: #b2c0ce;
  --navy-50: #ccd5df;
  --navy-30: #e5eaef;
  --navy-10: #f2f5f7;
  --deep-blue-1000: #001f3e;
  --deep-blue-900: #334455;
  --deep-blue-800: #667380;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-success: var(--success);
  --color-warning: var(--warning);
  --color-error: var(--error);

  --color-gold: var(--gold);
  --color-orange: var(--orange);
  --color-tangerine: var(--tangerine);
  --color-dark-blue: var(--dark-blue);
  --color-off-black: var(--off-black);
  --color-off-white: var(--off-white);
  --color-light-gray: var(--light-gray);
  --color-navy-1000: var(--navy-1000);
  --color-navy-900: var(--navy-900);
  --color-navy-800: var(--navy-800);
  --color-navy-700: var(--navy-700);
  --color-navy-600: var(--navy-600);
  --color-navy-500: var(--navy-500);
  --color-navy-400: var(--navy-400);
  --color-navy-300: var(--navy-300);
  --color-navy-200: var(--navy-200);
  --color-navy-100: var(--navy-100);
  --color-navy-50: var(--navy-50);
  --color-navy-30: var(--navy-30);
  --color-navy-10: var(--navy-10);
  --color-deep-blue-1000: var(--deep-blue-1000);
  --color-deep-blue-900: var(--deep-blue-900);
  --color-deep-blue-800: var(--deep-blue-800);
}

.svg-icon {
  width: 200px;
  height: 200px;
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground min-h-[100vh] flex flex-col;
  }
}

@utility caption-heading {
  @apply text-[26px] leading-[28px] tablet:text-[42px] tablet:leading-[46px] -tracking-[0.04em] font-normal;
  font-family: var(--font-sans);
}

@utility pt-header {
  padding-top: var(--header-height);
}

@utility scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
  &::-webkit-scrollbar {
    display: none;
  }
}

@utility bg-gradient-brand {
  background: linear-gradient(95deg, #ffb94a 0.83%, #f74a0b 99.17%);
}
/* ... */

